--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
+        <script src="scripts/jquery.novacancy.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
