correcting nite-time sleepyness mistakes.

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.scss">
+        <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
@@ -24,6 +24,7 @@
 
 <!-- ------------------ CONTAINERS   ----------------------------------- -->
         <div class="main">
+            <span class="title">Politi-Troll</span>
           <img src="../images/Placeholder-Troll.png">
         </div>
 
@@ -38,7 +39,7 @@
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
-        <script src="scripts/jquery.novacancy.js"></script>
+        <script src="scripts/chosen.jquery.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
