made #view-A-template template, along with accompanying styles.

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-,<!doctype html>
+<!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -28,12 +28,17 @@
           <img src="../images/Placeholder-Troll.png">
         </div>
 
+<!-- -----------------  TEMPLATES -------------------------------------->
 
 
+        <script type="text/template" id="view-A-template">
+            <p>Welcome! Tell your friendly neighborhood troll which politician you would like to know about, regarding what bills they voted on and how they voted, and he will take care of the rest!</p>
+            <input placeholder="What State is Your Politician In?">
+            <button></button>
+        </script>
 
 
-
-
+<!-- --------------------   SCRIPTS --------------------------------->
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/jquery.js"></script>
