1 failing test and some minor changes, renaming stuff.

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
         <script type="text/template" id="view-A-template">
             <p>Welcome! Tell your friendly neighborhood troll which politician you would like to know about, regarding what bills they voted on and how they voted, and he will take care of the rest!</p>
             <input placeholder="What State is Your Politician In?">
-            <button></button>
+            <button class="button"></button>
         </script>
 
 
