added politcianView and billView.

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,8 @@
 <!-- ------------------ CONTAINERS   ----------------------------------- -->
         <div class="main">
             <span class="title">Politi-Troll</span>
-          <img src="../images/Placeholder-Troll.png">
+            <img src="../images/Placeholder-Troll.png">
+            <div class="views"></div>
         </div>
 
 <!-- -----------------  TEMPLATES -------------------------------------->
