--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="lib/mocha/mocha.css">
 </head>
 <body>
+
+
+
+
+
+
     <div id="mocha"></div>
     <script src="lib/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
@@ -14,6 +20,14 @@
     <script>var expect = chai.expect</script>
 
     <!-- include source files here... -->
+    <script src="../app/scripts/113CongressBills.js"></script>
+    <script src="../app/scripts/garyAckermanRollCall.js"></script>
+    <script src="../app/scripts/currentMembers.js"></script>
+    <script src="../app/scripts/docReady.js"></script>
+    <script src="../app/scripts/models.js"></script>
+    <script src="../app/scripts/views.js"></script>
+    <script src="../app/scripts/collections.js"></script>
+    <script src="../app/scripts/routes.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
