--- a/app/index.html
+++ b/app/index.html
@@ -133,6 +133,7 @@
 
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
+        <script src="scripts/collections.js"></script>
         <script src="scripts/models.js"></script>
         <script src="scripts/views.js"></script>
         <script src="scripts/router.js"></script>
