put the chosen folder in bower components

--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,7 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/jquery.js"></script>
+        <script src="bower_components/chosen_v1.0.0/chosen.jquery.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
         <script src="scripts/chosen.jquery.js"></script>
