made state model that fetches data, based on the state, from the gov api. added chosen state options.

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/chosen.min.css">
+        <link rel="stylesheet" href="styles/chosen.css">
         <!-- endbuild -->
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
@@ -25,22 +25,7 @@
 
 <!-- ------------------ CONTAINERS   ----------------------------------- -->
         <div class="main">
-            <!-- <div class="head-wrap">
-                <span class="title">Politi-Troll</span>
-                <img src="../images/Placeholder-Troll.png">
-            </div> -->
-
             
-                
-                <!-- <p>These guys are from <span><%=politician.get('state') %></span>
-                </p>
-                <div class="politician-view">
-                </div>
-                <div class="input-wrap">
-                    <input placeholder="What District?">
-                    <button class="button">Submit</button>
-
-                </div> -->
         </div>
 
 <!-- -----------------  TEMPLATES -------------------------------------->
@@ -53,11 +38,60 @@
             </div>
             <p>Welcome! Tell your friendly neighborhood troll which politician you would like to know about, regarding what bills they voted on and how they voted, and he will take care of the rest!</p>
             <div class="foot-wrap">
-                <select class="chosen" placeholder="What State?">
-                    <option value="1">Alabama</option>
-                    <option value="1">Ur mama</option>
-                    <option value="1">Kintucky</option>
-                    <option value="1">NYC</option>
+                <select class="chosen" data-placeholder="Select Your State">
+                    <option></option>
+                    <option value="1">AL</option>
+                    <option value="1">AL</option>
+                    <option value="2">AK</option>
+                    <option value="3">AZ</option>
+                    <option value="4">AR</option>
+                    <option value="5">CA</option>
+                    <option value="6">CO</option>
+                    <option value="7">CT</option>
+                    <option value="8">DE</option>
+                    <option value="9">DC</option>
+                    <option value="10">FL</option>
+                    <option value="11">GA</option>
+                    <option value="12">HI</option>
+                    <option value="13">ID</option>
+                    <option value="14">IL</option>
+                    <option value="15">IN</option>
+                    <option value="16">IA</option>
+                    <option value="17">KS</option>
+                    <option value="18">KY</option>
+                    <option value="19">LA</option>
+                    <option value="20">ME</option>
+                    <option value="21">MD</option>
+                    <option value="22">MA</option>
+                    <option value="23">MI</option>
+                    <option value="24">MN</option>
+                    <option value="25">MS</option>
+                    <option value="26">MO</option>
+                    <option value="27">MT</option>
+                    <option value="28">NE</option>
+                    <option value="29">NV</option>
+                    <option value="30">NH</option>
+                    <option value="31">NJ</option>
+                    <option value="32">NM</option>
+                    <option value="33">NY</option>
+                    <option value="34">NC</option>
+                    <option value="35">ND</option>
+                    <option value="36">OH</option>
+                    <option value="37">OK</option>
+                    <option value="38">OR</option>
+                    <option value="39">PA</option>
+                    <option value="40">RI</option>
+                    <option value="41">SC</option>
+                    <option value="42">SD</option>
+                    <option value="43">TN</option>
+                    <option value="44">TX</option>
+                    <option value="45">UT</option>
+                    <option value="46">VT</option>
+                    <option value="47">VA</option>
+                    <option value="48">WA</option>
+                    <option value="49">WV</option>
+                    <option value="50">WI</option>
+                    <option value="51">WY</option>
 
                 </select>
                 <a href="/#B">
