--- a/app/index.html
+++ b/app/index.html
@@ -40,58 +40,57 @@
             <div class="foot-wrap">
                 <select class="chosen" data-placeholder="Select Your State">
                     <option></option>
-                    <option value="1">AL</option>
-                    <option value="1">AL</option>
-                    <option value="2">AK</option>
-                    <option value="3">AZ</option>
-                    <option value="4">AR</option>
-                    <option value="5">CA</option>
-                    <option value="6">CO</option>
-                    <option value="7">CT</option>
-                    <option value="8">DE</option>
-                    <option value="9">DC</option>
-                    <option value="10">FL</option>
-                    <option value="11">GA</option>
-                    <option value="12">HI</option>
-                    <option value="13">ID</option>
-                    <option value="14">IL</option>
-                    <option value="15">IN</option>
-                    <option value="16">IA</option>
-                    <option value="17">KS</option>
-                    <option value="18">KY</option>
-                    <option value="19">LA</option>
-                    <option value="20">ME</option>
-                    <option value="21">MD</option>
-                    <option value="22">MA</option>
-                    <option value="23">MI</option>
-                    <option value="24">MN</option>
-                    <option value="25">MS</option>
-                    <option value="26">MO</option>
-                    <option value="27">MT</option>
-                    <option value="28">NE</option>
-                    <option value="29">NV</option>
-                    <option value="30">NH</option>
-                    <option value="31">NJ</option>
-                    <option value="32">NM</option>
-                    <option value="33">NY</option>
-                    <option value="34">NC</option>
-                    <option value="35">ND</option>
-                    <option value="36">OH</option>
-                    <option value="37">OK</option>
-                    <option value="38">OR</option>
-                    <option value="39">PA</option>
-                    <option value="40">RI</option>
-                    <option value="41">SC</option>
-                    <option value="42">SD</option>
-                    <option value="43">TN</option>
-                    <option value="44">TX</option>
-                    <option value="45">UT</option>
-                    <option value="46">VT</option>
-                    <option value="47">VA</option>
-                    <option value="48">WA</option>
-                    <option value="49">WV</option>
-                    <option value="50">WI</option>
-                    <option value="51">WY</option>
+                    <option value="AL">Alabama</option>
+                    <option value="AK">Alaska</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="CA">California</option>
+                    <option value="CO">Colorado</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="DE">Delaware</option>
+                    <option value="DC">District of Columbia</option>
+                    <option value="FL">Florida</option>
+                    <option value="GA">Georgia</option>
+                    <option value="HI">Hawaii</option>
+                    <option value="ID">Idaho</option>
+                    <option value="IL">Illinois</option>
+                    <option value="IN">Indiana</option>
+                    <option value="IA">Iowa</option>
+                    <option value="KS">Kansas</option>
+                    <option value="KY">Kentucky</option>
+                    <option value="LA">Louisiana</option>
+                    <option value="ME">Maine</option>
+                    <option value="MD">Maryland</option>
+                    <option value="MA">Massachusetts</option>
+                    <option value="MI">Michigan</option>
+                    <option value="MN">Minnesota</option>
+                    <option value="MS">Mississippi</option>
+                    <option value="MO">Missouri</option>
+                    <option value="MT">Montana</option>
+                    <option value="NE">Nebraska</option>
+                    <option value="NV">Nevada</option>
+                    <option value="NH">New Hampshire</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NM">New Mexico</option>
+                    <option value="NY">New York</option>
+                    <option value="NC">North Carolina</option>
+                    <option value="ND">North Dakota</option>
+                    <option value="OH">Ohio</option>
+                    <option value="OK">Oklahoma</option>
+                    <option value="OR">Oregon</option>
+                    <option value="PA">Pennsylvania</option>
+                    <option value="RI">Rhode Island</option>
+                    <option value="SC">South Carolina</option>
+                    <option value="SD">South Dakota</option>
+                    <option value="TN">Tennessee</option>
+                    <option value="TX">Texas</option>
+                    <option value="UT">Utah</option>
+                    <option value="VT">Vermont</option>
+                    <option value="VA">Virginia</option>
+                    <option value="WA">Washington</option>
+                    <option value="WV">West Virginia</option>
+                    <option value="WI">Wisconsin</option>
+                    <option value="WY">Wyoming</option>
 
                 </select>
                 <a href="/#B">
