chosen plugin working from viewA/view-A-templatein to viewB/view-B-template. and fixed some stylin in view-A-template.

--- a/app/index.html
+++ b/app/index.html
@@ -112,7 +112,7 @@
                 <span class="title">Politi Troll</span>
                 <img src="../images/Placeholder-Troll.png">
             </div>
-            <p>These guys are from<span class="state-goes-here"></span>
+            <p>These guys are from <span class="state-goes-here"><%= options.stateCode%></span>
             </p>
             <div class="politician-view">
             </div>
