member-view-template/member name is now a link.

--- a/app/index.html
+++ b/app/index.html
@@ -142,8 +142,8 @@
         </script> -->
             
 <!-- member-template -->
-        <script type="text/tem" id="member-view">
-            <span><%= member.get('person').name%></span>
+        <script type="text/tem" id="member-view-template">
+            <a href="#"><%= member.get('person').name%></a>
         </script>
 
 <!--  bill-template-->
