--- a/app/index.html
+++ b/app/index.html
@@ -143,7 +143,7 @@
             
 <!-- member-template -->
         <script type="text/tem" id="member-view-template">
-            <a href="#"><%= member.get('person').name%></a>
+            <a href="#" id='<%= member.get("person").id%>'><%= member.get('person').name%></a>
         </script>
 
 <!--  bill-template-->
