added a link to the member <a>

--- a/app/index.html
+++ b/app/index.html
@@ -142,7 +142,7 @@
             
 <!-- member-template -->
         <script type="text/template" id="member-view-template">
-            <a href="#" class="member-id" id='<%= member.get("person").id%>'><%= member.get('person').name%></a>
+            <a href="/#D" class="member-id" id='<%= member.get("person").id%>'><%= member.get('person').name%></a>
         </script>
 
 <!--  bill-template-->
