ViewD now has an img.

--- a/app/index.html
+++ b/app/index.html
@@ -134,7 +134,8 @@
             </div>
             </p>
             <img class="logo" src="../images/Placeholder-Troll.png">
-            <div class="members-view"><%= member.get('person').name%></div> 
+
+            <div class="members-view"><img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-200px.jpeg"><%= member.get('person').name%></div>
             <div class="bill-view"></div>        
         </script>
             
