BillView is now getting the bill (i think, maybe not)and the vote. minimum functionality has been achieved. still plenty of bugs and features/functionality needs to be implemented. but I have at least hit this milestone

--- a/app/index.html
+++ b/app/index.html
@@ -145,7 +145,8 @@
 
 <!--  bill-template-->
         <script type="text/template" id="bill-view-template">
-            <div class='bills'><%= options.get('option').value %></div>
+            <div class='bills'><%= options.get('vote').question %></div>
+            <div class='vote'><%= options.get('option').value %></div>
         </script>
 
 <!-- --------------------   SCRIPTS --------------------------------->
