made back button for viewB

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+    <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -109,6 +109,10 @@
         <script type="text/template" id="view-B-template">
             <p class="yo">These politicians are from <span class="state-goes-here"><%= options.state%></span>
             </p>
+            <a href="">
+                <button>Back</button>
+            </a>
+
             <div class="members-view"></div>
             <hr>            
         </script>
