--- a/app/index.html
+++ b/app/index.html
@@ -147,7 +147,7 @@
             
 <!-- member-template -->
         <script type="text/template" id="member-view-template">
-            <a href="/#D" class="member-id" id='<%= member.get("person").id%>'><img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-50px.jpeg"><%= member.get('person').name %></a>
+            <a href="#D" class="member-id" id='<%= member.get("person").id%>'><img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-50px.jpeg"><%= member.get('person').name %></a>
         </script>
 
 <!--  bill-template-->
