another incorrect viewB fix

--- a/app/index.html
+++ b/app/index.html
@@ -95,10 +95,9 @@
                     <option value="WY">Wyoming</option>
                 </select>
                 
-                <a href="/#B">
+                <a href="#B">
                     <button>Submit</button>
                 </a>
-
             </div>
 
             
