removed extraneous code from template

--- a/app/index.html
+++ b/app/index.html
@@ -145,9 +145,14 @@
         </script>
             
 <!-- member-template -->
-        <script type="text/template" id="member-view-template">
+
+<!--       <script type="text/template" id="member-view-template">
             <a href="#D" class="member-id" id='<%= member.get("person").id%>'><img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-50px.jpeg"><%= member.get('person').name %></a>
-        </script>
+            </script> -->
+
+            <script type="text/template" id="member-view-template">
+                <a href="#D" class="member-id"><img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-50px.jpeg"><%= member.get('person').name %></a>
+                </script> 
 
 <!--  bill-template-->
         <script type="text/template" id="bill-view-template">
