--- a/app/index.html
+++ b/app/index.html
@@ -135,13 +135,15 @@
             <img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-200px.jpeg">
             <div class="member-name"><%= member.get('person').name%></div> 
             
-            <a href="#B">
-                <button>Previous</button>
-            </a>
+            <div class="btn-wrap">
+                <a href="#B">
+                    <button>Previous</button>
+                </a>
 
-            <a href="">
-                <button>Back To Start</button>
-            </a>      
+                <a href="">
+                    <button>Go Again</button>
+                </a>
+            </div>
         </script>
             
 <!-- member-template -->
