--- a/app/index.html
+++ b/app/index.html
@@ -160,7 +160,7 @@
         <script type="text/template" id="bill-view-template">
             <div class='created'><%= options.get('created')%></div>
             <div class='bill'><%= options.get('vote').question %></div>
-            <div class='vote'><%= options.get('option').value %></div>
+            <div class='vote <%= options.get('klass') %>'><%= options.get('option').value %></div>
         </script>
 
 <!-- --------------------   SCRIPTS --------------------------------->
