fixing up memberView

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,8 @@
 <!-- view-A-template -->
         <script type="text/template" id="view-A-template">
 
-            <p>Welcome! Tell your friendly neighborhood troll which politician you would like to know about, regarding what bills they voted on and how they voted, and he will take care of the rest!
+            <h1>Welcome! </h1>  
+            <p>Tell your friendly neighborhood troll which politician you would like to know about, regarding what bills they voted on and how they voted, and he will take care of the rest!
             </p>
 
             <div class="input-wrap">
@@ -153,7 +154,7 @@
             </script> -->
 
             <script type="text/template" id="member-view-template">
-                <a href="#D" class="member-id"><img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-50px.jpeg"><%= member.get('person').name %></a>
+                <a href="#D" class="member-id"><img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-200px.jpeg"><p><%= member.get('person').name %></p></a>
                 </script> 
 
 <!--  bill-template-->
