--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,11 @@
 
 <!-- ------------------ CONTAINERS   ----------------------------------- -->
         <span class="title">Politi Troll</span>
+        
+        <div class="logo-wrap">
             <img class="logo" src="images/Placeholder-Troll.png">
-        <img src="images/whitehouse.png" class="white-house">
+            <img src="images/whitehouse.png" class="white-house">
+        </div>
 
         <div class="main"></div>
 
