the troll has a friend

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
         <div class="logo-wrap">
             <img class="logo" src="images/Placeholder-Troll.png">
             <img src="images/whitehouse.png" class="white-house">
+            <img class="logo" src="images/Placeholder-Troll-flipped.png">
         </div>
 
         <div class="main"></div>
@@ -42,7 +43,7 @@
             <h1>Welcome! </h1>  
 
             <div class="info-wrap">
-                <p>Tell your friendly neighborhood troll which politician you would like to know about, regarding what bills they voted on and how they voted, and he will take care of the rest!
+                <p>Tell the trolls which politician you would like to know about, regarding what bills they voted on and how they voted, and he will take care of the rest!
                 </p>
 
                 <div class="input-wrap">
