--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
             <h1>Welcome! </h1>  
 
             <div class="info-wrap">
-                <p>Tell the trolls which politician you would like to know about, regarding what bills they voted on and how they voted, and he will take care of the rest!
+                <p>Tell the trolls which politician you would like to know about, regarding what bills they voted on and how they voted, and the trolls will take care of the rest!
                 </p>
 
                 <div class="input-wrap">
