--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
             <h1>Welcome! </h1>  
 
             <div class="info-wrap">
-                <p>Tell the trolls which politician you would like to know about, regarding what bills they voted on and how they voted, and the trolls will take care of the rest!
+                <p>Track how politician&apos;s vote. Start by picking a state.
                 </p>
 
                 <div class="input-wrap">
@@ -112,7 +112,7 @@
 
 <!-- view-B-template -->
         <script type="text/template" id="view-B-template">
-            <h1 class="yo">These politicians are from <span class="state-goes-here"><%= options.state%></span>
+            <h1 class="yo">These politicians are from <span class="state-goes-here"><%= options.state%>. Click on one to see how they vote.</span>
             </h1>
 
             <a href="">
