--- a/app/index.html
+++ b/app/index.html
@@ -171,6 +171,7 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/jquery.js"></script>
+        <script src="bower_components/backbone/docs/js/jquery.lazyload.js"></script>
         <script src="bower_components/chosen_v1.0.0/chosen.jquery.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
