converted timestamp more correctly

--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,7 @@
                 <div class='vote <%= options.get('klass') %>'><%= options.get('option').value %></div>
             </div>
             <div class='bill'><%= options.get('vote').question %></div>
+            <div class='created'><%= options.get('date')%></div>
             <div class='created'><%= options.get('time')%></div>
         </script>
 
