ViewD refactor img + added some overflow: hidden

--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,8 @@
                     <button class="button">Go Again</button>
                 </a>
             </div>
+
+            <div class="bills"></bills>
         </script>
             
 <!-- member-template -->
