--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,6 @@
                     <a href="#B">
                         <button class="button">Submit</button>
                     </a>
-
                 </div>
             </div>      
         </script>
@@ -123,23 +122,14 @@
             <hr>            
         </script>
 
-<!-- view-C-template 
-        <script type="text/template" id="view-C-template">
-            <div class="head-wrap">
-                <span class="title">Politi Troll</span>
-                <img src="../images/Placeholder-Troll.png">
-            </div>
-            <p>Pick your politician from<span><%=politician.get('state') %></span> in District<%= politician.get('district')%>
-            </p>
-            <div class="politician-view">
-            </div>
-
-        </script> -->
-
 <!-- view-D-template  -->
         <script type="text/template" id="view-D-template">
             <img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-200px.jpeg">
-            <div class="member-name"><%= member.get('person').name%></div> 
+            <div class="member-name"><%= member.get('person').name%></div>
+            <div class="keyword-search">
+                <input>
+                <input type="button" value="POO INSPECTOR">
+            </div>
             <div class="btn-wrap">
                 <a href="#B">
                     <button class="button">Previous</button>
@@ -150,8 +140,6 @@
                 </a>
             </div>
             <div class="bills"></div>
-            
-
         </script>
             
 <!-- member-template -->
@@ -179,16 +167,6 @@
         <script src="bower_components/backbone/backbone.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
 
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
