--- a/app/index.html
+++ b/app/index.html
@@ -113,11 +113,9 @@
         <script type="text/template" id="view-B-template">
             <h1 class="yo">These politicians are from <span class="state-goes-here"><%= options.state%>. Click on one to see how they vote.</span>
             </h1>
-
             <a href="">
                 <button class="button">Back</button>
             </a>
-
             <div class="members-view"></div>
             <hr>            
         </script>
@@ -127,14 +125,14 @@
             <img src="http://www.govtrack.us/data/photos/<%=member.get('person').id %>-200px.jpeg">
             <div class="member-name"><%= member.get('person').name%></div>
             <div class="keyword-search">
-                <input>
-                <input type="button" value="POO INSPECTOR">
+                <label for="key-search">Keyword Search</label>
+                <input id="key-search">
+                <input type="button" value="DO IT!!!!!">
             </div>
             <div class="btn-wrap">
                 <a href="#B">
                     <button class="button">Previous</button>
                 </a>
-
                 <a href="">
                     <button class="button">Go Again</button>
                 </a>
