start of keyword search functionality

--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
             <div class="keyword-search">
                 <label for="key-search">Keyword Search</label>
                 <input id="key-search">
-                <input type="button" value="DO IT!!!!!">
+                <input type="button" value="DO IT!!!!!" id="search-btn">
             </div>
             <div class="btn-wrap">
                 <a href="#B">
